# LeadGate

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cicd.yml
models/: threshold.json
notebooks/: 01-eda.ipynb  02-preprocessing.ipynb  03-baseline.ipynb  04-models.ipynb  05-imbalance.ipynb  06-threshold.ipynb  07-evaluation.ipynb
src/leadgate/: data.py  pipeline.py  threshold.py
tests/: conftest.py  test_data.py  test_pipeline.py  test_threshold.py
